# continual-learning-bench

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  run_benchmark.py
agent_docs/: README.md
configs/blind_spectrum_monitoring/: bsm_mixed_grid_ace.json  bsm_mixed_grid_icl.json  bsm_mixed_grid_notepad.json
notes/: icl-qwen35-9b-vs-opus47-codebase.md  icl-summary-replace-augment-analysis.md  qwen35-9b-baseline-passk.md  swe-bench-cl-env-plan.md  swe-bench-cl-final-dataset.md  swe-bench-cl-integration-plan.md  swe-bench-cl-qwen35-9b-baseline.md  swe-bench-cl-sequence-design.md
results/: .gitignore
scripts/: analyze_final_results.py  generate_leaderboard.py
src/: AGENTS.md  artifacts.py  cli.py  errors.py  interface.py  live_dashboard.py  logging_utils.py  registry.py  run_ids.py  system_manifest.py  trace_metrics.py  trace_storage.py  usage.py
tests/: test_ace_llm.py  test_ace_system.py  test_bsm.py  test_bsm_frozen_corpus.py  test_bsm_online_model.py  test_bsm_prepare_rollout.py  test_claude_system.py  test_cli.py  test_cli_types.py  test_codebase_adaptation_difficulty_screen.py  test_codebase_adaptation_generic_runtime.py  test_codebase_adaptation_repo_window_ranking.py  test_codebase_adaptation_sequential_curation.py  test_codex_system.py  test_cohort_studies_rollout.py  test_cohort_submission_schema.py  test_commands.py  test_container_backend.py  test_failure_artifacts.py  test_human_system.py  test_icl_notepad_flat_schema.py  test_icl_summary.py  test_live_dashboard.py  test_logging_utils.py  test_notepad_feedback.py  test_provider_adapters.py  test_registry.py  test_reproducibility.py  test_reward_first_runtime.py  test_rollout.py  test_sales_prediction.py  test_structured_output.py  test_swe_bench_cl_task.py  test_system_manifest.py  test_systems_common.py  test_task_rollouts.py  test_task_variants.py  test_token_budget_systems.py  test_trace_storage.py  test_usage.py  (+2 more)
viewers/: codebase_adaptation_comparison.html  compare_traces.html  run_all_viewer.html  single_task_viewer.html
(+302 files in other folders)
